--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.2",
     "zustand": "^4.5.2"
   },
